--- a/lucas_style.css
+++ b/lucas_style.css
@@ -196,4 +196,19 @@ body {
 a
 {
     color: inherit;
+    text-decoration: none;
+}
+
+#coursesBlock
+{
+    background-color: lightgreen; 
+    display: block;
+    margin-top: 100px; 
+    text-align: center;
+    border-radius: 15px;
+    box-shadow: 0 0 15px;
+    padding: 5%;
+    margin-right: auto;
+    margin-left: auto;
+    width: 100%;
 }
