--- a/lucas_style.css
+++ b/lucas_style.css
@@ -231,3 +231,18 @@ a
     border: 3px solid black;
     border-radius: 10px;
 }
+
+#resumeHTML
+{
+    margin: 0 0 0 0;
+    height: 20px;
+}
+
+#resumeViewer
+{
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 100%;
+    height: 630px;
+}
