--- a/lucas_style.css
+++ b/lucas_style.css
@@ -113,6 +113,20 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.portfolio-object {
+    position: relative;
+    background-color: rgb(15, 15, 15);
+    z-index: 3;
+    padding-bottom: 1.5%;
+    text-align: center;
+    border-top: 10px solid black;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+
+#last-portfolio-object {
+    border-bottom: 10px solid black;
+}
+
 .portL {
     float: left;
     z-index: 2;
