--- a/lucas_style.css
+++ b/lucas_style.css
@@ -255,10 +255,16 @@ a
 
 #fixed_left_blocks
 {
-    margin-top: 50px;
-    position: fixed;
     width: 40%;
+    position: fixed;
     min-width: 460px;
+    height: 100%;
+    overflow-y: scroll;
+}
+
+#fixed_left_blocks::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
 }
 
 .block_body
